Replaced body overflow-x: hidden with overflow-x: clip to fix nav overflow

--- a/components/Footer/footer.module.css
+++ b/components/Footer/footer.module.css
@@ -39,9 +39,20 @@
 @media only screen and (max-width: 530px){
     .footer nav{
         text-align: left;
+        font-size: .8rem;
+        
+    }
+
+}
+@media only screen and (max-width: 474px){
+    .footer nav{
+        text-align: left;
+        font-size: .8rem;
+    }
+    .footer ul li a{
+        margin: 2rem !important;
     }
     .footer ul{
         flex-direction: column;
-
     }
 }
