--- a/components/NavBar/navBar.module.css
+++ b/components/NavBar/navBar.module.css
@@ -4,7 +4,8 @@
 }
 
 .nav{
-    position: sticky !important;
+    position: -webkit-sticky;
+    position: sticky;
     top: 0;
     height: 120px;
     display: flex;
@@ -34,6 +35,7 @@
     min-height: 100% !important;
     padding: 1rem 0.5rem;
     margin: 0 .1rem;
+    text-shadow: 2px 2px 5px rgba(177, 0, 0, 0.986);
 }
 
 .navLinks li{
