--- a/styles/card.css
+++ b/styles/card.css
@@ -16,7 +16,9 @@
     transform-style: preserve-3d;
     transform: translateZ(0);
     transition: 0.3s;
+    box-shadow: 0px 0px 15px 0px var(--darker-red);
 }  
+
   
 .card:hover{
     transform: translateZ(50px);
