--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,25 +7,25 @@ body {
   padding: 0;
   margin: 0;
   font-size: 16px;
-
+  overflow-x: clip !important;
 }
 
 /* Variables */
 
 :root{
   --primary-black: #0e0e0f;
+  --section-clr: #151516;
   --footer-clr: rgba(15,15,15,.8);
   --primary-red: #ff0e1f;
   --darker-red: #9b000a;
 }
 
 body{
-  overflow-x: hidden !important;
   scrollbar-color: red !important;
 }
 
 body::-webkit-scrollbar{
-  width: 11px;
+  width: 8px;
 }
 
 body::-webkit-scrollbar-thumb {
@@ -74,7 +74,7 @@ p {
 }
 
 h2{
-  --min: 1.5em;
+  --min: 2em;
   --val: 4.5vw;
   --max: 2.5em;
   /* text-shadow: 3px 3px 10px var(--darker-red); */
@@ -128,6 +128,7 @@ section{
   color: white;
   display: flex;
   flex-direction: column;
+  background: var(--section-clr);
 }
 
 #realisations{
@@ -144,10 +145,28 @@ section{
 }
 
 .image-gallery-content .image-gallery-slide .image-gallery-image{
-  max-height: 75vh !important;
-  /* max-height: 85vh !important;
-  padding-top: 2rem; */
+  max-height: 65vh !important;
+   /* max-height: 85vh !important; */
+  padding-top: 5rem;
 }
+
+.image-gallery-thumbnails{
+  border-top: 2px solid var(--darker-red);
+  padding: 1rem !important;
+}
+
+.shadow-border{
+  box-shadow: 0px 2px 8px 0px red !important;
+}
+
+.flex-center{
+  background: var(--primary-black) !important;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+
 
 .mt-0{
   margin: 0 !important;
@@ -194,6 +213,7 @@ section{
 @media only screen and (max-width: 700px){
   section{
     padding: 1rem .9rem;
+    
   }
   #a-propos{
     padding: .5rem;
